samples/_failures_safe/1761096481_7db1ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a805cf20.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a805cf20.c:158:9: error: expected declaration or statement at end of input
  158 |         }
      |         ^
./samples/SAFE/__tmp_a805cf20.c:158:9: error: expected declaration or statement at end of input
